Fixed errors from shifting form

--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -50,6 +50,11 @@
     margin: 10px 0px;
 }
 
+.modal--form--errors{
+    font-size: 20px;
+    padding: 5px 0px;
+}
+
 
 /* Ids */
 #logIn-btn{
